--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<div>block</div>
+<html lang="en-US">
+    <head>
+        <meta charset="utf-8">
+        <title>blockPractice</title>
+        <meta name="author" content="High profile programmer">
+        <meta name="time" content="2019-11-21">
+        <link rel="stylesheet" href="./static/css/pageSetUp.css">
+    </head>
+
+    <body>
+        <div class="container">
+            <aside>
+
+            </aside>
+            <section>
+
+            </section>
+        </div>
+    </body>
+</html>
+
