--- a/index.html
+++ b/index.html
@@ -5,17 +5,65 @@
         <meta name="author" content="High profile programmer">
         <meta name="time" content="2019-11-21">
         <link rel="stylesheet" href="./static/css/pageSetUp.css">
+        <link rel="stylesheet" href="./iconfont.css">
+        <style>
+            ul
+            {
+                list-style-type:none;
+                padding-top: 240px;
+                padding-left: 120px;
+                font-size: 18;
+            }
+            a
+            {
+                display:inline-table;
+                font-family: "sans-serif";
+                font-weight: normal;
+                color:#F2F3F4;
+                width:150px;
+                text-align:left;
+                padding:25px;
+                text-decoration:none;
+                letter-spacing: 0.1ch;
+            }
+        </style>
     </head>
 
     <body>
         <div class="container">
             <aside>
-
+                    <ul>
+                            <li>
+                                <i class="iconfont icon-home"></i>
+                                <a href="#home">Home</a>
+                            </li>
+                            <li>
+                                <i class="iconfont icon-search"></i>
+                                <a href="https://www.google.com">Search</a>
+                            </li>
+                            <li>
+                                <i class="iconfont icon-twitter"></i>
+                                <a href="https://twitter.com">Twitter</a>
+                            </li>
+                            <li>
+                                <i class="iconfont icon-github"></i>
+                                <a href="https://github.com/MaeveQIU">Github</a>
+                            </li>
+                            <li>
+                                <i class="iconfont icon-stack-overflow"></i>
+                                <a href="https://stackoverflow.com">Stack Overflow</a>
+                            </li>
+                            <li>
+                                <i class="iconfont icon-aboutus"></i>
+                                <a href="#about">About</a>
+                            </li>
+                            </ul>
             </aside>
             <section>
 
             </section>
         </div>
+    
     </body>
 </html>
 
