修改虚化背景后覆盖字体的问题

--- a/index.html
+++ b/index.html
@@ -10,20 +10,24 @@
             ul
             {
                 list-style-type:none;
-                padding-top: 240px;
-                padding-left: 120px;
-                font-size: 18;
+                padding-top: 340px;
+                padding-left: 100px;
+                font-size: 20;
+                position: absolute;
+            }
+            ul li {
+                margin-bottom: 30px;
             }
             a
             {
-                display:inline-table;
+                display: inline;
                 font-family: "sans-serif";
                 font-weight: normal;
-                color:#F2F3F4;
-                width:150px;
-                text-align:left;
-                padding:25px;
-                text-decoration:none;
+                color: #F2F3F4;
+                width: 150px;
+                text-align: left;
+                padding: 25px;
+                text-decoration: none;
                 letter-spacing: 0.1ch;
             }
         </style>
@@ -32,6 +36,7 @@
     <body>
         <div class="container">
             <aside>
+                <div class="img"></div>
                     <ul>
                             <li>
                                 <i class="iconfont icon-home"></i>
