[Fangni, Qiushi, Liaowenqiang]{fix}:adjust the part belong to liaowenqiang

--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     </head>
 
     <body>
-      <div>
         <div class="container">
             <aside>
                 <div class="img"></div>
+                <div class="user-profile">
+                  <div class="user-pic">
+                      <img src="./static/images/baby.jpg" alt="profile photo" width="150" height="150" class="center">
+                  </div>
+                  <div class="user-name">Louis Barranqueiro</div>
+                  <div class="user-desc">I write code to enrich and ease life of others</div> 
+                </div>
                 <ul>
                     <li>
                         <i class="iconfont icon-home"></i>
