[ShiQiu] {refactor}: Rewrite the CSS format

--- a/index.html
+++ b/index.html
@@ -18,29 +18,30 @@
                   <div class="user-name">Louis Barranqueiro</div>
                   <div class="user-desc">I write code to enrich and ease life of others</div> 
                 </div>
-                <ul>
-                    <li>
-                        <i class="iconfont icon-home"></i>
+                
+                <ul class="sidebar-manu">
+                    <li class="sidebar-button">
+                        <img src="static/images/home.png">
                         <a href="#home">Home</a>
                     </li>
                     <li>
-                        <i class="iconfont icon-search"></i>
+                        <img src="static/images/search.png">
                         <a href="https://www.google.com">Search</a>
                     </li>
                     <li>
-                        <i class="iconfont icon-twitter"></i>
+                        <img src="static/images/twitter.png">
                         <a href="https://twitter.com">Twitter</a>
                     </li>
                     <li>
-                        <i class="iconfont icon-github"></i>
+                        <img src="static/images/github.png">
                         <a href="https://github.com/MaeveQIU">Github</a>
                     </li>
                     <li>
-                        <i class="iconfont icon-stack-overflow"></i>
+                        <img src="static/images/stack-overflow.png">
                         <a href="https://stackoverflow.com">Stack Overflow</a>
                     </li>
                     <li>
-                        <i class="iconfont icon-aboutus"></i>
+                        <img src="static/images/aboutus.png">
                         <a href="#about">About</a>
                     </li>
                 </ul>
