[ShiQiu] {feat}: Add main article

--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@
         </ul>
       </aside>
 
-      <div class="block-show"></div>
+      <div class="block-show">
+        <section class="main-article">
+          <h1 class="main-headline">Welcome to Tranquilpeak</h1>
+          <p class="main-datetime">Jun 15, 2015 in tranquilpeak, releases</p>
+          <p class="main-description">Tranquilpeak is a gorgeous responsive theme for Hexo blog framework. It has many features and integrated services to improve user experience.</p>
+          <a href="https://cn.bing.com">Continue reading</a>
+          <img src="static/images/main-article-image.jpg" alt="Just a bridge.">
+      </section>
+
+      </div>
     </div>
   </body>
 </html>
