[ShiQiu] {fix}:Change the manu format

--- a/index.html
+++ b/index.html
@@ -19,26 +19,29 @@
           <div class="user-desc">I write code to enrich and ease life of others</div>
         </div>
 
-        <ul class="sidebar-manu">
+        <ul class="sidebar-manu-left">
           <li class="sidebar-button">
             <img src="static/images/home.png">
             <a href="#home">Home</a>
           </li>
-          <li>
+          <li class="sidebar-button">
             <img src="static/images/search.png">
             <a href="https://www.google.com">Search</a>
           </li>
-          <li>
+          <li class="sidebar-button">
             <img src="static/images/twitter.png">
             <a href="https://twitter.com">Twitter</a>
           </li>
+          <li class="sidebar-button">
+            <img src="static/images/stack-overflow.png">
+            <a href="https://stackoverflow.com">Stack Overflow</a>
+          </li>
+          </li>
+        </ul>
+        <ul class="sidebar-manu-right">
           <li>
             <img src="static/images/github.png">
             <a href="https://github.com/MaeveQIU">Github</a>
-          </li>
-          <li>
-            <img src="static/images/stack-overflow.png">
-            <a href="https://stackoverflow.com">Stack Overflow</a>
           </li>
           <li>
             <img src="static/images/aboutus.png">
