--- a/index.html
+++ b/index.html
@@ -57,7 +57,28 @@
           <p class="main-description">Tranquilpeak is a gorgeous responsive theme for Hexo blog framework. It has many features and integrated services to improve user experience.</p>
           <a href="https://cn.bing.com">Continue reading</a>
           <img src="static/images/main-article-image.jpg" alt="Just a bridge.">
-      </section>
+        </section>
+
+        <div class="list-article">
+          <div class="blod-block-up">
+
+            <img src="static/images/songmingguo.jpg" alt="picture" height="130" width="160" class="blog-block-up-left">
+            <div class="blog-block-up-right">
+              <div class="blog-title">
+                <h2>Elements showcase </h2>
+              </div>
+              <div class="blog-date">May 28, 2015 in tranquilpeak, feature</div>
+              <div class="blog-para">Check out how Tranquilpeak theme display well HTML elements(Title,  paragraph, blockquote, table and more..). It's simple and elegant.</div>
+            </div>
+          </div>
+          
+          <div class="blog-block-down">
+            <a href="https://cn.bing.com">Continue reading</a>
+
+          </div>
+
+        </div>
+
 
       </div>
     </div>
