[ShiQiu] {refactor}: Revise the code

--- a/index.html
+++ b/index.html
@@ -20,31 +20,30 @@
         </div>
 
         <ul class="sidebar-manu-left">
-          <li class="sidebar-button">
-            <img src="static/images/home.png">
+          <li>
+            <img src="./static/images/home.png" alt="home icon">
             <a href="#home">Home</a>
           </li>
-          <li class="sidebar-button">
-            <img src="static/images/search.png">
+          <li>
+            <img src="./static/images/search.png" alt="search icon">
             <a href="https://www.google.com">Search</a>
           </li>
-          <li class="sidebar-button">
-            <img src="static/images/twitter.png">
+          <li>
+            <img src="./static/images/twitter.png" alt="twitter icon">
             <a href="https://twitter.com">Twitter</a>
           </li>
-          <li class="sidebar-button">
-            <img src="static/images/stack-overflow.png">
+          <li>
+            <img src="./static/images/stack-overflow.png" alt="stack-overflow icon">
             <a href="https://stackoverflow.com">Stack Overflow</a>
-          </li>
           </li>
         </ul>
         <ul class="sidebar-manu-right">
           <li>
-            <img src="static/images/github.png">
+            <img src="./static/images/github.png" alt="github icon">
             <a href="https://github.com/MaeveQIU">Github</a>
           </li>
           <li>
-            <img src="static/images/aboutus.png">
+            <img src="./static/images/aboutus.png" alt="aboutus icon">
             <a href="#about">About</a>
           </li>
         </ul>
@@ -56,13 +55,13 @@
           <p class="main-datetime">Jun 15, 2015 in tranquilpeak, releases</p>
           <p class="main-description">Tranquilpeak is a gorgeous responsive theme for Hexo blog framework. It has many features and integrated services to improve user experience.</p>
           <a href="https://cn.bing.com">Continue reading</a>
-          <img src="static/images/main-article-image.jpg" alt="Just a bridge.">
+          <img src="./static/images/main-article-image.jpg" alt="Just a bridge.">
         </section>
 
         <div class="list-article">
           <div class="blod-block-up">
 
-            <img src="static/images/songmingguo.jpg" alt="picture" height="130" width="160" class="blog-block-up-left">
+            <img src="./static/images/songmingguo.jpg" alt="picture" height="130" width="160" class="blog-block-up-left">
             <div class="blog-block-up-right">
               <div class="blog-title">
                 <h2>Elements showcase </h2>
@@ -71,7 +70,7 @@
               <div class="blog-para">Check out how Tranquilpeak theme display well HTML elements(Title,  paragraph, blockquote, table and more..). It's simple and elegant.</div>
             </div>
           </div>
-          
+
           <div class="blog-block-down">
             <a href="https://cn.bing.com">Continue reading</a>
 
