[liaowenqiang]{fix}: fix blogs list part

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="img"></div>
         <div class="user-profile">
           <div class="user-pic">
-            <img src="./static/images/baby.jpg" alt="profile photo" class="center">
+            <img src="./static/images/baby-1.jpg" alt="profile photo" class="center">
           </div>
           <div class="user-name">Louis Barranqueiro</div>
           <div class="user-desc">I write code to enrich and ease life of others</div>
@@ -59,22 +59,60 @@
         </section>
 
         <div class="list-article">
-          <div class="blod-block-up">
+          <!-- <div class="blod-block-up"> -->
 
-            <img src="./static/images/songmingguo.jpg" alt="picture" height="130" width="160" class="blog-block-up-left">
+          <div>
+            <img src="./static/images/baby-4.jpg" alt="picture" height="130" width="160" class="blog-block-up-left">
             <div class="blog-block-up-right">
               <div class="blog-title">
                 <h2>Elements showcase </h2>
               </div>
               <div class="blog-date">May 28, 2015 in tranquilpeak, feature</div>
               <div class="blog-para">Check out how Tranquilpeak theme display well HTML elements(Title,  paragraph, blockquote, table and more..). It's simple and elegant.</div>
+              <div class="blog-block-down">
+                <a href="https://cn.bing.com">Continue reading</a>
+              </div>
             </div>
           </div>
 
-          <div class="blog-block-down">
+          <div>
+            <img src="./static/images/baby-2.jpg" alt="picture" height="130" width="160" class="blog-block-up-left">
+            <div class="blog-block-up-right">
+              <div class="blog-title">
+                <h2>Elements showcase </h2>
+              </div>
+              <div class="blog-date">May 28, 2015 in tranquilpeak, feature</div>
+              <div class="blog-para">Check out how Tranquilpeak theme display well HTML elements(Title,  paragraph, blockquote, table and more..). It's simple and elegant.</div>
+              <div class="blog-block-down">
+                <a href="https://cn.bing.com">Continue reading</a>
+              </div>
+            </div>
+          </div>
+
+          <div>
+              <img src="./static/images/baby-3.jpg" alt="picture" height="130" width="160" class="blog-block-up-left">
+              <div class="blog-block-up-right">
+                <div class="blog-title">
+                  <h2>Elements showcase </h2>
+                </div>
+                <div class="blog-date">May 28, 2015 in tranquilpeak, feature</div>
+                <div class="blog-para">Check out how Tranquilpeak theme display well HTML elements(Title,  paragraph, blockquote, table and more..). It's simple and elegant.</div>
+                <div class="blog-block-down">
+                  <a href="https://cn.bing.com">Continue reading</a>
+                </div>
+              </div>
+            </div>
+
+
+
+
+
+          <!-- </div> -->
+
+          <!-- <div class="blog-block-down">
             <a href="https://cn.bing.com">Continue reading</a>
 
-          </div>
+          </div> -->
 
         </div>
 
