[Wenqiang Liao]{fix}: remove the underline of links in blog list

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h2>Elements showcase </h2>
               </div>
               <div class="blog-date">May 28, 2015 in tranquilpeak, feature</div>
-              <div class="blog-para">Check out how Tranquilpeak theme display well HTML elements(Title,  paragraph, blockquote, table and more..). It's simple and elegant.</div>
+              <div class="blog-paragraph">Check out how Tranquilpeak theme display well HTML elements(Title,  paragraph, blockquote, table and more..). It's simple and elegant.</div>
               <div class="blog-block-down">
                 <a href="https://cn.bing.com">Continue reading</a>
               </div>
@@ -80,7 +80,7 @@
                 <h2>Elements showcase </h2>
               </div>
               <div class="blog-date">May 28, 2015 in tranquilpeak, feature</div>
-              <div class="blog-para">Check out how Tranquilpeak theme display well HTML elements(Title,  paragraph, blockquote, table and more..). It's simple and elegant.</div>
+              <div class="blog-paragraph">Check out how Tranquilpeak theme display well HTML elements(Title,  paragraph, blockquote, table and more..). It's simple and elegant.</div>
               <div class="blog-block-down">
                 <a href="https://cn.bing.com">Continue reading</a>
               </div>
@@ -94,7 +94,7 @@
                 <h2>Elements showcase </h2>
               </div>
               <div class="blog-date">May 28, 2015 in tranquilpeak, feature</div>
-              <div class="blog-para">Check out how Tranquilpeak theme display well HTML elements(Title,  paragraph, blockquote, table and more..). It's simple and elegant.</div>
+              <div class="blog-paragraph">Check out how Tranquilpeak theme display well HTML elements(Title,  paragraph, blockquote, table and more..). It's simple and elegant.</div>
               <div class="blog-block-down">
                 <a href="https://cn.bing.com">Continue reading</a>
               </div>
