[ShiQiu] {fix}: Change the link between htmls

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <h1 class="main-headline">Welcome to Tranquilpeak</h1>
           <p class="main-datetime">Jun 15, 2015 in tranquilpeak, releases</p>
           <p class="main-description">Tranquilpeak is a gorgeous responsive theme for Hexo blog framework. It has many features and integrated services to improve user experience.</p>
-          <a href="https://cn.bing.com">Continue reading</a>
+          <a href="./block-detail-msg.html">Continue reading</a>
           <img src="./static/images/main-article-image.jpg" alt="Just a bridge.">
         </section>
 
@@ -68,7 +68,7 @@
               <div class="blog-date">May 28, 2015 in tranquilpeak, feature</div>
               <div class="blog-paragraph">Check out how Tranquilpeak theme display well HTML elements(Title,  paragraph, blockquote, table and more..). It's simple and elegant.</div>
               <div class="blog-block-down">
-                <a href="https://cn.bing.com">Continue reading</a>
+                <a href="./block-detail-msg.html">Continue reading</a>
               </div>
             </div>
           </div>
@@ -82,7 +82,7 @@
               <div class="blog-date">May 28, 2015 in tranquilpeak, feature</div>
               <div class="blog-paragraph">Check out how Tranquilpeak theme display well HTML elements(Title,  paragraph, blockquote, table and more..). It's simple and elegant.</div>
               <div class="blog-block-down">
-                <a href="https://cn.bing.com">Continue reading</a>
+                <a href="./block-detail-msg.html">Continue reading</a>
               </div>
             </div>
           </div>
@@ -96,14 +96,14 @@
               <div class="blog-date">May 28, 2015 in tranquilpeak, feature</div>
               <div class="blog-paragraph">Check out how Tranquilpeak theme display well HTML elements(Title,  paragraph, blockquote, table and more..). It's simple and elegant.</div>
               <div class="blog-block-down">
-                <a href="https://cn.bing.com">Continue reading</a>
+                <a href="./block-detail-msg.html">Continue reading</a>
               </div>
             </div>
           </div>
 
         </div>
       </div>
-      
+
     </div>
   </body>
 </html>
