--- a/block-detail-msg.html
+++ b/block-detail-msg.html
@@ -12,7 +12,7 @@
       <header>
         <div class="nav"><img src="./static/images/list.png" alt="list" class="list"></div>
         <div class="nav-desc"><p>Tranquilpeak Hexo theme demo</P></div>
-        <div class="nav"><img src="./static/images/baby.jpg" alt="profile-photo" class="photo"></div>
+        <div class="nav"><img src="./static/images/baby-1.jpg" alt="profile-photo" class="photo"></div>
       </header>
 
       <div class="detail">
@@ -28,8 +28,8 @@
           <video controls>
             <source src="./static/videos/rabbit320.mp4" type="video/mp4">
             <p>
-              Your browser doesn't support HTML5 video. Here is a 
-              <a href="rabbit320.mp4">link to the video</a> 
+              Your browser doesn't support HTML5 video. Here is a
+              <a href="rabbit320.mp4">link to the video</a>
               instead.
             </p>
           </video>
