[ShiQiu] {fix}: Change Manu

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <a href="https://www.google.com">Search</a>
           </li>
           <li>
-            <img src="./static/images/twitter.png" alt="twitter icon">
-            <a href="https://twitter.com">Twitter</a>
+            <img src="./static/images/archive.png" alt="archive icon">
+            <a href="./timeline.html">Archive</a>
           </li>
           <li>
             <img src="./static/images/stack-overflow.png" alt="stack-overflow icon">
