--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h1 class="main-headline">Welcome to Tranquilpeak</h1>
           <p class="main-datetime">Jun 15, 2015 in tranquilpeak, releases</p>
           <p class="main-description">Tranquilpeak is a gorgeous responsive theme for Hexo blog framework. It has many features and integrated services to improve user experience.</p>
-          <a href="./block-detail-msg.html">Continue reading</a>
+          <a href="./blog-detail-msg.html">Continue reading</a>
           <img src="./static/images/main-article-image.jpg" alt="Just a bridge.">
         </section>
 
@@ -71,7 +71,7 @@
               <div class="blog-date">May 28, 2015 in tranquilpeak, feature</div>
               <div class="blog-paragraph">Check out how Tranquilpeak theme display well HTML elements(Title,  paragraph, blockquote, table and more..). It's simple and elegant.</div>
               <div class="blog-block-down">
-                <a href="./block-detail-msg.html">Continue reading</a>
+                <a href="./blog-detail-msg.html">Continue reading</a>
               </div>
             </div>
           </div>
@@ -85,7 +85,7 @@
               <div class="blog-date">May 28, 2015 in tranquilpeak, feature</div>
               <div class="blog-paragraph">Check out how Tranquilpeak theme display well HTML elements(Title,  paragraph, blockquote, table and more..). It's simple and elegant.</div>
               <div class="blog-block-down">
-                <a href="./block-detail-msg.html">Continue reading</a>
+                <a href="./blog-detail-msg.html">Continue reading</a>
               </div>
             </div>
           </div>
@@ -99,7 +99,7 @@
               <div class="blog-date">May 28, 2015 in tranquilpeak, feature</div>
               <div class="blog-paragraph">Check out how Tranquilpeak theme display well HTML elements(Title,  paragraph, blockquote, table and more..). It's simple and elegant.</div>
               <div class="blog-block-down">
-                <a href="./block-detail-msg.html">Continue reading</a>
+                <a href="./blog-detail-msg.html">Continue reading</a>
               </div>
             </div>
           </div>
