--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>blockPractice</title>
+    <title>blogPractice</title>
     <meta name="author" content="High profile programmer">
     <meta name="time" content="2019-11-21">
     <link rel="stylesheet" href="./static/css/pageSetUp.css">
