[NiFang]{reactive}: add reactive

--- a/index.html
+++ b/index.html
@@ -11,48 +11,51 @@
   <body>
     <div class="container">
       <aside>
-        <div class="img"></div>
+        <div class="filter"></div>
         <div class="user-profile">
           <div class="user-pic">
             <a href="./about-me.html">
-              <img src="./static/images/baby-1.jpg" alt="profile photo" class="center">
+              <img src="./static/images/baby-1.jpg" alt="profile photo" class="img-photo">
             </a>
           </div>
-          <div class="user-name">Louis Barranqueiro</div>
-          <div class="user-desc">I write code to enrich and ease life of others</div>
+          <p class="user-name">Louis Barranqueiro</p>
+          <p class="user-desc">I write code to enrich and ease life of others</p>
         </div>
 
-        <ul class="sidebar-manu-left">
-          <li>
-            <img src="./static/images/home.png" alt="home icon">
-            <a href="#home">Home</a>
-          </li>
-          <li>
-            <img src="./static/images/search.png" alt="search icon">
-            <a href="https://www.google.com">Search</a>
-          </li>
-          <li>
-            <img src="./static/images/archive.png" alt="archive icon">
-            <a href="./timeline.html">Archive</a>
-          </li>
-          <li>
-            <img src="./static/images/stack-overflow.png" alt="stack-overflow icon">
-            <a href="https://stackoverflow.com">Stack Overflow</a>
-          </li>
-        </ul>
-        <ul class="sidebar-manu-right">
-          <li>
-            <img src="./static/images/github.png" alt="github icon">
-            <a href="https://github.com/MaeveQIU">Github</a>
-          </li>
-          <li>
-            <img src="./static/images/aboutus.png" alt="aboutus icon">
-            <a href="#about">About</a>
-          </li>
-        </ul>
+        <div class="sidebar-manu">
+          <ul class="sidebar-manu-left">
+            <li>
+              <img src="./static/images/home.png" alt="home icon">
+              <a href="#home">Home</a>
+            </li>
+            <li>
+              <img src="./static/images/search.png" alt="search icon">
+              <a href="https://www.google.com">Search</a>
+            </li>
+            <li>
+              <img src="./static/images/archive.png" alt="archive icon">
+              <a href="./timeline.html">Archive</a>
+            </li>
+            <li>
+              <img src="./static/images/stack-overflow.png" alt="stack-overflow icon">
+              <a href="https://stackoverflow.com">Stack Overflow</a>
+            </li>
+          </ul>
+          <ul class="sidebar-manu-right">
+            <li>
+              <img src="./static/images/github.png" alt="github icon">
+              <a href="https://github.com/MaeveQIU">Github</a>
+            </li>
+            <li>
+              <img src="./static/images/aboutus.png" alt="aboutus icon">
+              <a href="#about">About</a>
+            </li>
+          </ul>
+        </div>
+        
       </aside>
 
-      <div class="block-show">
+      <div class="blog-show">
         <section class="main-article">
           <h1 class="main-headline">Welcome to Tranquilpeak</h1>
           <p class="main-datetime">Jun 15, 2015 in tranquilpeak, releases</p>
