[NiFang]{refactor}: refactor file-stucture and about-reactive

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -4,7 +4,7 @@
     <title>blockPractice</title>
     <meta name="author" content="High profile programmer">
     <meta name="time" content="2019-11-23">
-    <link rel="stylesheet" href="./static/css/about-me.css">
+    <link rel="stylesheet" href="../static/css/about-me.css">
   </head>
 
   <body>
@@ -15,11 +15,11 @@
         <div class="card">
           <div class="close-button">
             <a href="./index.html">
-              <img class="close" src="./static/images/close.png" alt="close">
+              <img class="close" src="../static/images/close.png" alt="close">
             </a>
           </div>
           
-          <img class="baby-photo" src="./static/images/baby-1.jpg" alt="baby">
+          <img class="baby-photo" src="../static/images/baby-1.jpg" alt="baby">
 
           <h2>Louis Barranqueiro</h2>
 
@@ -29,12 +29,12 @@
 
           <div class="lock-and-address">
             <div class="block">
-              <img src="./static/images/kids lock.png" alt="kids lock">
+              <img src="../static/images/kids lock.png" alt="kids lock">
               <br/>
               <p>Software developer</p>
             </div>
             <div class="block">
-                <img src="./static/images/address.png" alt="address">
+                <img src="../static/images/address.png" alt="address">
                 <br/>
                 <p>California</p>
             </div>
