--- a/html/timeline.html
+++ b/html/timeline.html
@@ -4,7 +4,7 @@
     <title>blogPractice-timeline</title>
     <meta name="author" content="High profile programmer">
     <meta name="time" content="2019-11-23">
-    <link rel="stylesheet" href="./static/css/timeline.css">
+    <link rel="stylesheet" href="../static/css/timeline.css">
   </head>
 
   <body>
