--- a/html/continue-reading.html
+++ b/html/continue-reading.html
@@ -4,15 +4,15 @@
     <title>block-detail-msg</title>
     <meta name="author" content="High profile programmer">
     <meta name="time" content="2019-11-22">
-    <link rel="stylesheet" href="./static/css/blog-detail-msg.css">
+    <link rel="stylesheet" href="../static/css/continue-reading.css">
   </head>
 
   <body>
     <div>
       <header>
-        <div class="nav"><img src="./static/images/list.png" alt="list" class="list"></div>
+        <div class="nav"><img src="../static/images/list.png" alt="list" class="list"></div>
         <div class="nav-desc"><p>Tranquilpeak Hexo theme demo</P></div>
-        <div class="nav"><img src="./static/images/baby-1.jpg" alt="profile-photo" class="photo"></div>
+        <div class="nav"><img src="../static/images/baby-1.jpg" alt="profile-photo" class="photo"></div>
       </header>
 
       <div class="detail">
@@ -26,7 +26,7 @@
         <div class="vedio">
           <p class="vedio-desc">Youtube</p>
           <video controls>
-            <source src="./static/videos/rabbit320.mp4" type="video/mp4">
+            <source src="../static/videos/rabbit320.mp4" type="video/mp4">
             <p>
               Your browser doesn't support HTML5 video. Here is a
               <a href="rabbit320.mp4">link to the video</a>
