--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>blogPractice</title>
     <meta name="author" content="High profile programmer">
     <meta name="time" content="2019-11-21">
-    <link rel="stylesheet" href="../static/css/index.css">
+    <link rel="stylesheet" href="./static/css/index.css">
   </head>
 
   <body>
@@ -14,7 +14,7 @@
         <div class="user-profile">
           <div class="user-pic">
             <a href="./about-me.html">
-              <img src="../static/images/baby-1.jpg" alt="profile photo" class="img-photo">
+              <img src="./static/images/baby-1.jpg" alt="profile photo" class="img-photo">
             </a>
           </div>
           <p class="user-name">Louis Barranqueiro</p>
@@ -24,30 +24,30 @@
         <div class="sidebar-manu">
           <ul class="sidebar-manu-left">
             <li>
-              <img src="../static/images/home.png" alt="home icon">
+              <img src="./static/images/home.png" alt="home icon">
               <a href="./index.html">Home</a>
             </li>
             <li>
-              <img src="../static/images/search.png" alt="search icon">
+              <img src="./static/images/search.png" alt="search icon">
               <a href="https://www.google.com">Search</a>
             </li>
             <li>
-              <img src="../static/images/archive.png" alt="archive icon">
-              <a href="./timeline.html">Archive</a>
+              <img src="./static/images/archive.png" alt="archive icon">
+              <a href="./html/timeline.html">Archive</a>
             </li>
             <li>
-              <img src="../static/images/stack-overflow.png" alt="stack-overflow icon">
+              <img src="./static/images/stack-overflow.png" alt="stack-overflow icon">
               <a href="https://stackoverflow.com">Stack Overflow</a>
             </li>
           </ul>
           <ul class="sidebar-manu-right">
             <li>
-              <img src="../static/images/github.png" alt="github icon">
-              <a href="https://github.com/MaeveQIU">Github</a>
+              <img src="./static/images/github.png" alt="github icon">
+              <a href="https://github.com/crystalfn/blogPractice">Github</a>
             </li>
             <li>
-              <img src="../static/images/aboutus.png" alt="aboutus icon">
-              <a href="#about">About</a>
+              <img src="./static/images/aboutus.png" alt="aboutus icon">
+              <a href="./html/about-me.html">About</a>
             </li>
           </ul>
         </div>
@@ -62,14 +62,14 @@
             Tranquilpeak is a gorgeous responsive theme for Hexo blog framework. 
             It has many features and integrated services to improve user experience.
           </p>
-          <a href="./continue-reading.html">Continue reading</a>
-          <img src="../static/images/main-article-image.jpg" alt="Just a bridge.">
+          <a href="./html/continue-reading.html">Continue reading</a>
+          <img src="./static/images/main-article-image.jpg" alt="Just a bridge.">
         </section>
 
         <div class="list-article">
           <div class="list">
             <div class="list-img">
-              <img src="../static/images/baby-4.jpg" alt="picture">
+              <img src="./static/images/baby-4.jpg" alt="picture">
             </div>
             <section>
               <h2 class="blog-title">Elements showcase </h2>
@@ -79,7 +79,7 @@
                 (Title,  paragraph, blockquote, table and more..). 
                 It's simple and elegant.
               </p>
-              <a class="continue-reading" href="./continue-reading.html">
+              <a class="continue-reading" href="./html/continue-reading.html">
                 Continue reading
               </a>
             </section>
@@ -87,7 +87,7 @@
 
           <div class="list">
             <div class="list-img">
-              <img src="../static/images/baby-2.jpg" alt="picture">
+              <img src="./static/images/baby-2.jpg" alt="picture">
             </div>
             <section>
               <h2 class="blog-title">Elements showcase </h2>
@@ -97,7 +97,7 @@
                 (Title,  paragraph, blockquote, table and more..). 
                 It's simple and elegant.
               </p>
-              <a class="continue-reading" href="./continue-reading.html">
+              <a class="continue-reading" href="./html/continue-reading.html">
                 Continue reading
               </a>
             </section>
@@ -105,7 +105,7 @@
 
           <div class="list">
             <div class="list-img">
-              <img src="../static/images/baby-3.jpg" alt="picture">
+              <img src="./static/images/baby-3.jpg" alt="picture">
             </div>
             <section>
               <h2 class="blog-title">Elements showcase </h2>
@@ -115,7 +115,7 @@
                 (Title,  paragraph, blockquote, table and more..). 
                 It's simple and elegant.
               </p>
-              <a class="continue-reading" href="./continue-reading.html">
+              <a class="continue-reading" href="./html/continue-reading.html">
                 Continue reading
               </a>
             </section>
