--- a/html/timeline.html
+++ b/html/timeline.html
@@ -12,7 +12,12 @@
     <ul class="first-article">
       <li>
         <h2 class="first-title">JavaScript中更简便的数据处理函数.map()，reduce()，.filter()</h2>
-        <p class="first-desc">如果你刚接触Javascript可能你还没有听说过.map()，reduce()，.filter()。或者听说过，看过别人用过但是自己在实际项目中没有用过。在国内很多开发项目都是需要考虑IE8的兼容，为了兼容很多Javascript好用的方法和技巧都被埋没了。但是我发现近几年开始，很多开发项目已经完全抛弃了IE这个魔鬼了。如果你不需要兼容古老的IE浏览器了，那就要开始熟悉一下这几个方法来处...</p>
+        <p class="first-desc">
+          如果你刚接触Javascript可能你还没有听说过.map()，reduce()，.filter()。
+          或者听说过，看过别人用过但是自己在实际项目中没有用过。在国内很多开发项目都是需要考虑IE8的兼容，
+          为了兼容很多Javascript好用的方法和技巧都被埋没了。但是我发现近几年开始，很多开发项目已经完全抛弃了IE这个魔鬼了。
+          如果你不需要兼容古老的IE浏览器了，那就要开始熟悉一下这几个方法来处...
+        </p>
       </li>
       <div class="first-circle"></div>
       <div class="first-line"></div>
@@ -28,7 +33,13 @@
       <div class="second-circle"></div>
       <li>
           <h2 class="second-title">如何高效学习编程</h2>
-          <p class="second-desc">编程确实不是一件容易的事情，除了要有较强的逻辑思维，还需要花大量的时间和集中力来提升和维持一定的高度。与其他的领域不一样的是，技术每日都在变，所以对于编程初学者是很难一直与时并进的。就算是技术大神和老司机们也是追赶的比较吃力的。在技术领域打滚的这些年里，通过经历和经验总结出一些高效的学习方式和方法，在这篇文章里与大家分享。让我们现在就在技术领域的学习之路上奔跑吧！锁定目标，风雨兼程在刚刚...</p>
+          <p class="second-desc">
+            编程确实不是一件容易的事情，除了要有较强的逻辑思维，
+            还需要花大量的时间和集中力来提升和维持一定的高度。与其他的领域不一样的是，技术每日都在变，
+            所以对于编程初学者是很难一直与时并进的。就算是技术大神和老司机们也是追赶的比较吃力的。
+            在技术领域打滚的这些年里，通过经历和经验总结出一些高效的学习方式和方法，在这篇文章里与大家分享。
+            让我们现在就在技术领域的学习之路上奔跑吧！锁定目标，风雨兼程在刚刚...
+          </p>
       </li>
     </ul>
   </body>
