[NiFang]{fix}: Change the about-me link path

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -14,7 +14,7 @@
 
         <div class="card">
           <div class="close-button">
-            <a href="./index.html">
+            <a href="../index.html">
               <img class="close" src="../static/images/close.png" alt="close">
             </a>
           </div>
