--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="filter"></div>
         <div class="user-profile">
           <div class="user-pic">
-            <a href="./about-me.html">
+            <a href="./html/about-me.html">
               <img src="./static/images/baby-1.jpg" alt="profile photo" class="img-photo">
             </a>
           </div>
